<resources>
    <string name="app_name">NDW-Knüppel</string>
    <string name="permissionNotGrantedError">Permission was not granted!</string>
    <string name="errorTitleIsMissing">Title is missing</string>
    <string name="errorNoBitmapSelected">Please select an image to proceed</string>
    <string name="errorCouldNotSafeFile">Could not safe file</string>

    <string name="saving">Saving…</string>
    <string name="addPicture">Add</string>
    <string name="sticks">Sticks</string>
    <string name="bars">Bars</string>
    <string name="title">Title</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="stickCount">Stick count</string>
    <string name="orderBy">Order by</string>
    <string name="open">Open</string>
    <string name="uploadChanges">Upload changes</string>
    <string name="uploadingChanges">Uploading changes…</string>
    <string name="successChangesWereUploaded">Updated</string>
    <string name="errorCouldNotUploadUpdate">Could not update</string>

    <string name="evaluate">Evaluate</string>
    <string name="evaluating">Evaluating</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="addBatch">Add Batch</string>
    <string name="editBatch">Edit Batch</string>
    <string name="caption">Caption</string>
    <string name="exportToCsv">Export to CSV</string>
    <string name="fileName">Filename</string>
    <string name="includeHeaderInformation">Include header</string>

    <string name="batchSaveError">Save error</string>
    <string name="errorCaptionAlreadyUsed">Caption already used</string>
    <string name="errorCaptionCannotBeEmpty">Caption is empty</string>

    <string name="errorCsvFileAlreadyPresentTitle">Duplicate filename</string>
    <string name="errorCsvFileAlreadyPresentText">There is already a file with the given name</string>

    <string name="updateBatchData">Update batch data?</string>
</resources>