<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?colorOnPrimary"
        app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/tvTitle"
                android:text="@string/exportToCsv"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/grid_4"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/grid_6" />

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:hint="@string/fileName"
                android:textSize="16sp"
                android:paddingHorizontal="@dimen/grid_5"
                android:paddingVertical="@dimen/grid_2"
                android:background="@drawable/background_round_corners_10dp"
                android:backgroundTint="?android:colorBackground"
                android:id="@+id/etFileName"
                android:inputType="textMultiLine"
                android:layout_marginTop="@dimen/grid_4"
                android:layout_marginHorizontal="@dimen/grid_4"
                android:drawablePadding="@dimen/grid_5"
                android:drawableStart="@drawable/ic_insert_file"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="55dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etFileName"
                android:layout_marginTop="@dimen/grid_3"
                android:background="@drawable/ripple_background_round_corners_10dp"
                android:backgroundTint="?android:colorBackground"
                android:layout_marginHorizontal="@dimen/grid_4"
                android:id="@+id/includeHeadersLayout" >

            <com.google.android.material.checkbox.MaterialCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/includeHeadersCheckbox"
                    android:clickable="false"
                    android:focusable="false"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/grid_4"
                    android:checked="true"
                    android:buttonTint="?colorPrimary"/>

            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toEndOf="@id/includeHeadersCheckbox"
                    android:text="@string/includeHeaderInformation"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:layout_constraintTop_toBottomOf="@+id/includeHeadersLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/grid_6"
                android:background="?android:colorBackground" />

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:text="@string/confirm"
                android:background="@drawable/ripple_background"
                android:id="@+id/btnConfirm"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="?colorPrimary"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="1"
                android:layout_marginTop="@dimen/grid_6"
                android:layout_marginStart="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:background="@drawable/ripple_background"
                android:text="@string/cancel"
                android:id="@+id/btnCancel"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?colorPrimary"
                app:layout_constraintEnd_toStartOf="@id/btnConfirm"
                app:layout_constraintVertical_bias="1"
                android:layout_marginEnd="1dp"
                android:layout_marginTop="@dimen/grid_6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>